<resources>
    <string name="app_name">Quizz</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="creditos">Credits</string>
    <string name="opcao">Option</string>
    <string name="cancelar">Cancel</string>
    <string name="guardar">Save</string>
    <string name="nome">Name</string>
    <string name="idade">Age:</string>
    <string name="textviewNome">TextView</string>
    <string name="textviewIdade">TextView</string>
    <string name="nome_obrig">Can\'t be empty</string>
    <string name="jogador_adicionado">New Player Add</string>
    <string name="charact">Special characters are not valid!</string>
    <string name="escolha_o_seu_tema">Chose your theme</string>
    <string name="buttonCancelar1">Button</string>
    <string name="cancelar1">Cancel</string>
    <string name="eliminar1">Delete</string>
    <string name="guardar1">Save</string>
    <string name="defini_es">Definition</string>
    <string name="buttonCancelar2">Button</string>

    <string name="buttoncancelar2">Cancel</string>
    <string name="buttonEliminar3">Delete</string>
    <string name="temas">Theme</string>
    <string name="desporto">Sport</string>
    <string name="ci_ncia">Science</string>
    <string name="artes">Arts</string>
    <string name="outros">Outros</string>
</resources>
